# dlog

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakeSettings.json  Cargo.nix  Cargo.toml  FLAKES.md  README.md  cpplint.cfg  flake.nix  main.cpp  rebuild.sh  test_entries.csv  version.h.in
scripts/: dlog-import-watson.sh
src/: commandline.cpp  commandline.h  config.cpp  config.h  date.cpp  date.h  entries.cpp  entries.h  entry.cpp  entry.h  files.cpp  files.h  files.rs  format.cpp  format.h  format.rs  input.rs  main.cpp  main.rs  options.cpp  options.h  parser.cpp  parser.h  parser.rs  test.rs  tracker.cpp  tracker.h
src/cli/: color.cpp  color.h
src/data/: mod.rs  statistics.rs
src/entries/: entry.rs  mod.rs  read.rs  write.rs
src/errors/: incomplete_entry_error.rs  invalid_entry_error.rs  invalid_format_error.rs  mod.rs  no_entry_error.rs  not_implemented_error.rs
src/subcommands/: count.rs  fill.cpp  fill.h  fill.rs  generate_completions.rs  log.cpp  log.h  log.rs  main.cpp  main.h  mod.rs  remove.cpp  remove.h  remove.rs  start.cpp  start.h  start.rs  subcommand.cpp  subcommand.h  subcommands.cpp  subcommands.h  subcommands.rs  summary.cpp  summary.h  summary.rs
src/window_hooks/: foreground_unix.cpp  foreground_win.cpp  window_hooks.h
