[package]
name = "dlog-rust"
version = "0.1.0"
authors = ["cengels <cengels@tuta.io>"]
edition = "2018"
description = "A command line utility to efficiently track where you spend your time."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
enum_dispatch = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
