[package]
name = "dlog"
version = "0.1.1"
authors = ["cengels <cengels@tuta.io>"]
edition = "2018"
description = "A command line utility to efficiently track where you spend your time."
repository = "https://github.com/cengels/dlog"
license-file = "LICENSE"
readme = "README.md"
keywords = ["cli", "time-tracking", "command-line"]
categories = ["command-line-utilities"]
exclude = ["test_entries.csv", "src/test.rs"]

[package.metadata.bundle]
identifier = "com.cengels.dlog"

[dependencies]
clap = "3.0.0-beta.2"
clap_generate = "3.0.0-beta.2"
enum_dispatch = "0.3.4"
serde = { version = "1.0", features = ["derive"] }
csv = "1.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "3.0.1"
colored = "2.0.0"
pager = "0.16.0"

[dev-dependencies]
proptest = "0.10.1"
